--- a/hosts.yml
+++ b/hosts.yml
@@ -7,8 +7,8 @@ all:
     # The list of hosts contained in the "all" group. These
     # can be real DNS hostnames, local host mappings, or IP
     # addresses.
-    192.168.142.101:
-    192.168.142.102:
+    20.231.69.14:
+    20.231.69.14:
   vars:
     # These are group-level variables associated with the "all"
     # group. Ansible gives many options with respect to variable
@@ -20,8 +20,9 @@ all:
     # are configuring in our main playbook.
     ansible_network_os: "ios"
     ansible_user: "ansible"
-    ansible_password: "ansible"
+    ansible_password: "Ansible123!!"
     ansible_python_interpreter: "/usr/bin/env python"
     ntp_server1: "192.0.2.1"
     ntp_server2: "192.0.2.2"
+    ansible_ssh_private_key_file: "~/key.pem"
 ...
