--- a/hosts.yml
+++ b/hosts.yml
@@ -24,5 +24,5 @@ all:
     ansible_python_interpreter: "/usr/bin/env python"
     ntp_server1: "192.0.2.1"
     ntp_server2: "192.0.2.2"
-    ansible_ssh_private_key_file: "~/key.pem"
+    #ansible_ssh_private_key_file: "~/key.pem"
 ...
